# adbc-driver-spark

./: .gitignore  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  buf.gen.yaml  go.mod  go.sum  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
c/: README.md  driver.go  utils.c  utils.h
docs/: architecture.md  compatibility.md  configuration.md  connecting.md  contributing.md  examples.md  index.md  installation.md  integrations.md  metadata.md  python-dbapi.md  querying.md  quickstart.md  troubleshooting.md  type-mapping.md  usage-c.md  usage-go.md  usage-python.md  usage-r.md  usage-ruby.md  usage-rust.md
docs/stylesheets/: extra.css
driver/spark/: connection.go  coverage_test.go  database.go  driver.go  fakespark_test.go  hermetic_test.go  metadata.go  metadata_test.go  objects.go  objects_test.go  params.go  params_test.go  statement.go
examples/c/: README.md  quickstart.c
examples/go/: README.md
examples/go/metadata/: main.go
examples/go/parameters/: main.go
examples/go/quickstart/: main.go
examples/python/: 01_quickstart.py  02_arrow_and_pandas.py  03_parameters.py  04_metadata.py  05_ddl_and_dml.py  06_auth_tls.py  07_polars.py  08_duckdb.py  09_pyarrow_streaming.py  10_pandas_read_sql.py  README.md
examples/r/: README.md  quickstart.R
examples/ruby/: README.md  quickstart.rb
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
internal/sparkconnect/: client.go  client_test.go  config.go  config_test.go  errors.go  errors_test.go  result_reader.go  streaming_test.go
internal/sparkconnect/proto/spark/connect/: base.pb.go  base_grpc.pb.go  catalog.pb.go  commands.pb.go  common.pb.go  example_plugins.pb.go  expressions.pb.go  ml.pb.go  ml_common.pb.go  pipelines.pb.go  relations.pb.go  types.pb.go
proto/: buf.yaml
python/: README.md  pyproject.toml  setup.py
python/adbc_driver_spark/: __init__.py  _version.py  dbapi.py
python/tests/: conftest.py  test_integration.py  test_package.py
tests/: README.md
tests/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
tests/e2e/: conformance_test.go  conftest.py  harness.go  query_test.go  requirements.txt  test_python_e2e.py
